Colab을 통해 생성됨

--- a/AItestCode/project01.ipynb
+++ b/AItestCode/project01.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPy3O05HXF+QWBS8xLfaUv/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +22,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/whyranox3/Hacksa/blob/master/project01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/whyranox3/Hacksa/blob/master/AItestCode/project01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "EnaZb4sqFkQ8"
       },
@@ -53,39 +52,36 @@
       "cell_type": "code",
       "source": [
         "# 변수 설정\n",
-        "apple = 100  # 사과 가격\n",
-        "apple_num = 2  # 사과 개수\n",
-        "orange = 200  # 귤 가격\n",
-        "orange_num = 4  # 귤 개수\n",
-        "tax = 1.1  # 세금 비율\n",
+        "apple = 100\n",
+        "apple_num = 2\n",
+        "orange = 250\n",
+        "orange_num = 4\n",
+        "tax = 1.0\n",
         "\n",
         "# 계층 생성\n",
         "mul_apple_layer = MulLayer()\n",
         "mul_orange_layer = MulLayer()\n",
-        "add_apple_orange_layer = MulLayer()\n",
+        "add_layer = MulLayer()\n",
         "mul_tax_layer = MulLayer()"
       ],
       "metadata": {
         "id": "zVT_lPvhFtgp"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# 순전파\n",
-        "# 사과와 귤 각각의 가격 계산\n",
         "apple_price = mul_apple_layer.forward(apple, apple_num)\n",
         "orange_price = mul_orange_layer.forward(orange, orange_num)\n",
         "\n",
-        "# 사과와 귤 가격 합산\n",
         "total_price = apple_price + orange_price\n",
         "\n",
-        "# 세금 포함 최종 가격 계산\n",
         "final_price = mul_tax_layer.forward(total_price, tax)\n",
         "\n",
-        "print(final_price)  # 최종 가격 출력"
+        "print(final_price)"
       ],
       "metadata": {
         "colab": {
@@ -94,7 +90,7 @@
         "id": "BP5NgYMnFwA7",
         "outputId": "ac9b554a-bdbf-44ec-861a-52a9c7ee8d42"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +122,7 @@
         "id": "LTPHUk92Hx2x",
         "outputId": "42626444-cbab-4520-9871-e7edc6f60d51"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
