Colab을 통해 생성됨

--- a/AItestCode/project01.ipynb
+++ b/AItestCode/project01.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "EnaZb4sqFkQ8"
       },
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "zVT_lPvhFtgp"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -88,15 +88,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BP5NgYMnFwA7",
-        "outputId": "ac9b554a-bdbf-44ec-861a-52a9c7ee8d42"
+        "outputId": "9a9a3d38-c281-4da9-e7fa-b86c1e7dd847"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1100.0\n"
+            "1200.0\n"
           ]
         }
       ]
@@ -109,26 +109,25 @@
         "dtotal_price, dtax = mul_tax_layer.backward(dprice)\n",
         "dapple_price, dorange_price = dtotal_price, dtotal_price  # 합산에서 각각 기울기 전달\n",
         "\n",
-        "# 사과와 귤 각각의 역전파\n",
         "dapple, dapple_num = mul_apple_layer.backward(dapple_price)\n",
         "dorange, dorange_num = mul_orange_layer.backward(dorange_price)\n",
         "\n",
-        "print(dapple, dapple_num, dorange, dorange_num, dtax)  # 각 기울기 출력"
+        "print(dapple, dapple_num, dorange, dorange_num, dtax)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LTPHUk92Hx2x",
-        "outputId": "42626444-cbab-4520-9871-e7edc6f60d51"
+        "outputId": "db1be9ea-5a06-4dde-8c24-9d3b9ae71ac5"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2.2 110.00000000000001 4.4 220.00000000000003 1000\n"
+            "2.0 100.0 4.0 250.0 1200\n"
           ]
         }
       ]
