--- a/AItestCode/project01.ipynb
+++ b/AItestCode/project01.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 72,
       "metadata": {
         "id": "EnaZb4sqFkQ8"
       },
@@ -56,9 +56,8 @@
         "apple_num = 2\n",
         "orange = 250\n",
         "orange_num = 4\n",
-        "tax = 1.0\n",
+        "tax = 1.1\n",
         "\n",
-        "# 계층 생성\n",
         "mul_apple_layer = MulLayer()\n",
         "mul_orange_layer = MulLayer()\n",
         "add_layer = MulLayer()\n",
@@ -67,7 +66,7 @@
       "metadata": {
         "id": "zVT_lPvhFtgp"
       },
-      "execution_count": 2,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -88,15 +87,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BP5NgYMnFwA7",
-        "outputId": "9a9a3d38-c281-4da9-e7fa-b86c1e7dd847"
+        "outputId": "1263d76c-f4a1-4ad7-df8c-c222b65e7093"
       },
-      "execution_count": 3,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1200.0\n"
+            "1320.0\n"
           ]
         }
       ]
@@ -107,7 +106,7 @@
         "# 역전파\n",
         "dprice = 1\n",
         "dtotal_price, dtax = mul_tax_layer.backward(dprice)\n",
-        "dapple_price, dorange_price = dtotal_price, dtotal_price  # 합산에서 각각 기울기 전달\n",
+        "dapple_price, dorange_price = dtotal_price, dtotal_price\n",
         "\n",
         "dapple, dapple_num = mul_apple_layer.backward(dapple_price)\n",
         "dorange, dorange_num = mul_orange_layer.backward(dorange_price)\n",
@@ -119,15 +118,61 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LTPHUk92Hx2x",
-        "outputId": "db1be9ea-5a06-4dde-8c24-9d3b9ae71ac5"
+        "outputId": "341b7b6e-c623-42fa-a703-d3387f32694c"
       },
-      "execution_count": 4,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2.0 100.0 4.0 250.0 1200\n"
+            "2.2 110.00000000000001 4.4 275.0 1200\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 데이터 정리\n",
+        "data = [\n",
+        "    [\"Apple Price\", apple_price, dapple_price],\n",
+        "    [\"Orange Price\", orange_price, dorange_price],\n",
+        "    [\"Total Price\", total_price, dtotal_price],\n",
+        "    [\"Tax\", tax, float(dtax)],\n",
+        "    [\"Final Price\", final_price, \"-\"]\n",
+        "]\n",
+        "\n",
+        "# 표 시각화\n",
+        "print(\"순전파와 역전파 결과:\")\n",
+        "print(\"{:<13} {:<10} {:<15}\".format(\"항목\", \"순전파 결과\", \"역전파 기울기\"))\n",
+        "print(\"-\" * 45)\n",
+        "for row in data:\n",
+        "    formatted_row1 = \"{:.2f}\".format(float(row[1])) if isinstance(row[1], (int, float)) else row[1]\n",
+        "    formatted_row2 = \"{:.2f}\".format(float(row[2])) if isinstance(row[2], (int, float)) else row[2]\n",
+        "    print(\"{:<15} {:<15} {:<15}\".format(row[0], formatted_row1, formatted_row2))\n"
+      ],
+      "metadata": {
+        "id": "gMhleBybDKlY",
+        "outputId": "2f70999a-93eb-494b-c3cb-0b188c97cb53",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "순전파와 역전파 결과:\n",
+            "항목            순전파 결과     역전파 기울기        \n",
+            "---------------------------------------------\n",
+            "Apple Price     200.00          1.10           \n",
+            "Orange Price    1000.00         1.10           \n",
+            "Total Price     1200.00         1.10           \n",
+            "Tax             1.10            1200.00        \n",
+            "Final Price     1320.00         -              \n"
           ]
         }
       ]
