Colab을 통해 생성됨

--- a/AItestCode/project01.ipynb
+++ b/AItestCode/project01.ipynb
@@ -136,6 +136,10 @@
       "source": [
         "# 데이터 정리\n",
         "data = [\n",
+        "    [\"Apple\", apple, dapple],\n",
+        "    [\"Apple num\", apple_num, dapple_num],\n",
+        "    [\"Orange\", orange, dorange],\n",
+        "    [\"Orange num\", orange_num, dorange_num],\n",
         "    [\"Apple Price\", apple_price, dapple_price],\n",
         "    [\"Orange Price\", orange_price, dorange_price],\n",
         "    [\"Total Price\", total_price, dtotal_price],\n",
@@ -143,7 +147,6 @@
         "    [\"Final Price\", final_price, \"-\"]\n",
         "]\n",
         "\n",
-        "# 표 시각화\n",
         "print(\"순전파와 역전파 결과:\")\n",
         "print(\"{:<13} {:<10} {:<15}\".format(\"항목\", \"순전파 결과\", \"역전파 기울기\"))\n",
         "print(\"-\" * 45)\n",
@@ -153,13 +156,13 @@
         "    print(\"{:<15} {:<15} {:<15}\".format(row[0], formatted_row1, formatted_row2))\n"
       ],
       "metadata": {
-        "id": "gMhleBybDKlY",
-        "outputId": "2f70999a-93eb-494b-c3cb-0b188c97cb53",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gMhleBybDKlY",
+        "outputId": "0a2b50e4-c735-4c3c-e500-de1f2a7f7d0b"
       },
-      "execution_count": 76,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,6 +171,10 @@
             "순전파와 역전파 결과:\n",
             "항목            순전파 결과     역전파 기울기        \n",
             "---------------------------------------------\n",
+            "Apple           100.00          2.20           \n",
+            "Apple num       2.00            110.00         \n",
+            "Orange          250.00          4.40           \n",
+            "Orange num      4.00            275.00         \n",
             "Apple Price     200.00          1.10           \n",
             "Orange Price    1000.00         1.10           \n",
             "Total Price     1200.00         1.10           \n",
